header and footer completed

--- a/index.html
+++ b/index.html
@@ -5,9 +5,167 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="nav-container">
+            <nav class="container nav-header">
+                <div class="links">
+                    <a href="#">Donna</a>
+                    <a href="#">Uomo</a>
+                    <a href="#">Bambini</a>
+                </div>
+                <div class="logo">
+                    <img src="./img/boolean-logo.png" alt="Logo boolean">
+                </div>
+                <div class="icons">
+                    <a href="#"><i class="fa-solid fa-user"></i></a>
+                    <a href="#"><i class="fa-solid fa-heart"></i></a>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>                  
+                </div>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="container main-flex">
+            <div class="card">
+                <div class="card-image">
+                    <img class="first-image" src="./img/1.webp" alt="primo lato(1)">
+                    <img class="second-image" src="./img/1b.webp" alt="secondo lato(2)">
+                    <i class="fa-solid fa-heart heart"></i>
+                    <div class="tag sales-tag">
+                        -50%
+                    </div>
+                    <div class="tag sustainability-tag">
+                        Sostenibilità 
+                    </div>
+                </div>
+                <div class="card-content">
+                    <span class="brand">
+                        Levi's
+                    </span>
+                    <h3 class="card-item">Relaxed fit tee unisex</h3>
+                    <span class="price">
+                        14.99€
+                    </span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img class="first-image" src="./img/2.webp" alt="primo lato(1)">
+                    <img class="second-image" src="./img/2b.webp" alt="secondo lato(2)">
+                    <i class="fa-solid fa-heart heart"></i>
+                    <div class="tag sales-tag">
+                        -30%
+                    </div>
+                </div>
+                <div class="card-content">
+                    <span class="brand">
+                        Levi's
+                    </span>
+                    <h3 class="card-item">Relaxed fit tee unisex</h3>
+                    <span class="price">
+                        14.99€
+                    </span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img class="first-image" src="./img/3.webp" alt="primo lato(1)">
+                    <img class="second-image" src="./img/3b.webp" alt="secondo lato(2)">
+                    <i class="fa-solid fa-heart heart"></i>
+                    <div class="tag sales-tag">
+                        -50%
+                    </div>
+                </div>
+                <div class="card-content">
+                    <span class="brand">
+                        Levi's
+                    </span>
+                    <h3 class="card-item">Relaxed fit tee unisex</h3>
+                    <span class="price">
+                        14.99€
+                    </span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img class="first-image" src="./img/4.webp" alt="primo lato(1)">
+                    <img class="second-image" src="./img/4b.webp" alt="secondo lato(2)">
+                    <i class="fa-solid fa-heart heart"></i>
+                    <div class="tag sales-tag">
+                        -50%
+                    </div>
+                    <div class="tag sustainability-tag">
+                        Sostenibilità 
+                    </div>
+                </div>
+                <div class="card-content">
+                    <span class="brand">
+                        Levi's
+                    </span>
+                    <h3 class="card-item">Relaxed fit tee unisex</h3>
+                    <span class="price">
+                        14.99€
+                    </span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img class="first-image" src="./img/5.webp" alt="primo lato(1)">
+                    <img class="second-image" src="./img/5b.webp" alt="secondo lato(2)">
+                    <i class="fa-solid fa-heart heart"></i>
+                </div>
+                <div class="card-content">
+                    <span class="brand">
+                        Levi's
+                    </span>
+                    <h3 class="card-item">Relaxed fit tee unisex</h3>
+                    <span class="price">
+                        14.99€
+                    </span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img class="first-image" src="./img/6.webp" alt="primo lato(1)">
+                    <img class="second-image" src="./img/6b.webp" alt="secondo lato(2)">
+                    <i class="fa-solid fa-heart heart"></i>
+                    <div class="tag only-sust-tag">
+                        Sostenibilità 
+                    </div>
+                </div>
+                <div class="card-content">
+                    <span class="brand">
+                        Levi's
+                    </span>
+                    <h3 class="card-item">Relaxed fit tee unisex</h3>
+                    <span class="price">
+                        14.99€
+                    </span>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="container footer-flex">
+            <div class="left-column">
+                <h3>Booleand s.r.l.</h3>
+                <a href="#">Informazioni legali</a>
+                <a href="#">Inormativa sulla privacy</a>
+                <a href="#">Diritto di accesso</a>
+            </div>
+            <div class="right-column">
+                <h4>Trovaci anche su</h4>
+                <i class="fa-brands fa-twitter-square"></i>
+                <i class="fa-brands fa-facebook-square"></i>
+                <i class="fa-brands fa-instagram-square"></i>
+                <i class="fa-brands fa-pinterest-square"></i>
+                <i class="fa-brands fa-youtube-square"></i>
+            </div>
+        </div>
+    </footer>  
 </body>
 </html>
