--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <header>
         <div class="nav-container">
@@ -23,7 +27,7 @@
                 <div class="icons">
                     <a href="#"><i class="fa-solid fa-user"></i></a>
                     <a href="#"><i class="fa-solid fa-heart"></i></a>
-                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>                  
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
                 </div>
             </nav>
         </div>
@@ -31,6 +35,7 @@
     <main>
         <div class="container main-flex">
             <div class="card">
+                <!-- Contenitore immagine card -->
                 <div class="card-image">
                     <img class="first-image" src="./img/1.webp" alt="primo lato(1)">
                     <img class="second-image" src="./img/1b.webp" alt="secondo lato(2)">
@@ -39,20 +44,25 @@
                         -50%
                     </div>
                     <div class="tag sustainability-tag">
-                        Sostenibilità 
+                        Sostenibilità
                     </div>
                 </div>
+                <!-- Contenitore informazioni card -->
                 <div class="card-content">
                     <span class="brand">
                         Levi's
                     </span>
-                    <h3 class="card-item">Relaxed fit tee unisex</h3>
+                    <h3 class="card-item">RELAXED FIT TEE UNISEX</h3>
                     <span class="price">
                         14.99€
+                    </span>
+                    <span class="previous-price">
+                        29.99€
                     </span>
                 </div>
             </div>
             <div class="card">
+                <!-- Contenitore immagine card -->
                 <div class="card-image">
                     <img class="first-image" src="./img/2.webp" alt="primo lato(1)">
                     <img class="second-image" src="./img/2b.webp" alt="secondo lato(2)">
@@ -61,6 +71,7 @@
                         -30%
                     </div>
                 </div>
+                <!-- Contenitore informazioni card -->
                 <div class="card-content">
                     <span class="brand">
                         Levi's
@@ -69,9 +80,13 @@
                     <span class="price">
                         14.99€
                     </span>
+                    <span class="previous-price">
+                        29.99€
+                    </span>
                 </div>
             </div>
             <div class="card">
+                <!-- Contenitore immagine card -->
                 <div class="card-image">
                     <img class="first-image" src="./img/3.webp" alt="primo lato(1)">
                     <img class="second-image" src="./img/3b.webp" alt="secondo lato(2)">
@@ -79,7 +94,8 @@
                     <div class="tag sales-tag">
                         -50%
                     </div>
-                </div>
+                </div>                     
+                <!-- Contenitore informazioni card -->           
                 <div class="card-content">
                     <span class="brand">
                         Levi's
@@ -88,9 +104,13 @@
                     <span class="price">
                         14.99€
                     </span>
+                    <span class="previous-price">
+                        29.99€
+                    </span>
                 </div>
             </div>
             <div class="card">
+                <!-- Contenitore immagine card -->
                 <div class="card-image">
                     <img class="first-image" src="./img/4.webp" alt="primo lato(1)">
                     <img class="second-image" src="./img/4b.webp" alt="secondo lato(2)">
@@ -99,9 +119,10 @@
                         -50%
                     </div>
                     <div class="tag sustainability-tag">
-                        Sostenibilità 
+                        Sostenibilità
                     </div>
                 </div>
+                <!-- Contenitore informazioni card -->
                 <div class="card-content">
                     <span class="brand">
                         Levi's
@@ -110,14 +131,19 @@
                     <span class="price">
                         14.99€
                     </span>
+                    <span class="previous-price">
+                        29.99€
+                    </span>
                 </div>
             </div>
             <div class="card">
+                <!-- Contenitore immagine card -->
                 <div class="card-image">
                     <img class="first-image" src="./img/5.webp" alt="primo lato(1)">
                     <img class="second-image" src="./img/5b.webp" alt="secondo lato(2)">
                     <i class="fa-solid fa-heart heart"></i>
                 </div>
+                <!-- Contenitore informazioni card -->
                 <div class="card-content">
                     <span class="brand">
                         Levi's
@@ -129,14 +155,16 @@
                 </div>
             </div>
             <div class="card">
+                <!-- Contenitore immagine card -->
                 <div class="card-image">
                     <img class="first-image" src="./img/6.webp" alt="primo lato(1)">
                     <img class="second-image" src="./img/6b.webp" alt="secondo lato(2)">
                     <i class="fa-solid fa-heart heart"></i>
                     <div class="tag only-sust-tag">
-                        Sostenibilità 
+                        Sostenibilità
                     </div>
                 </div>
+                <!-- Contenitore informazioni card -->
                 <div class="card-content">
                     <span class="brand">
                         Levi's
@@ -166,6 +194,7 @@
                 <i class="fa-brands fa-youtube-square"></i>
             </div>
         </div>
-    </footer>  
+    </footer>
 </body>
+
 </html>
